<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewsUpdate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Large">Large</string>
    <string name="Medium">Medium</string>
    <string name="Small">SmallText</string>
    <string name="search_title">search</string>
    <string name="search_hint">Test</string>

    <string-array name="drawer_array">
        <item>Latest News</item>
        <item>Politics News</item>
        <item>Business News</item>
        <item>Technology News</item>
        <item>Sports News</item>
        <item>News &amp; Update</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="pwd_forgot">Forgot password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

</resources>