<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/lightgray"
    >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" 
        style="?android:borderlessButtonStyle"
        />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dp" 
    android:layout_marginTop="100dp">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10" android:inputType="none"
        android:background="@drawable/edittext_bg"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/edittext_size"
        android:layout_marginRight="@dimen/edittext_size"
        android:hint="@string/username"
        android:ellipsize="end"
        >

    </EditText>
</LinearLayout>

<LinearLayout 
    android:layout_width="fill_parent" 
      android:layout_height="60dp"
    >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10" android:inputType="none"
        android:background="@drawable/edittext_bg"
        android:layout_marginLeft="@dimen/edittext_size"
        android:layout_marginRight="@dimen/edittext_size"
         android:hint="@string/password"
         android:ellipsize="end"
        />
</LinearLayout>

<ImageView
    android:id="@+id/imageView1"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
        android:layout_marginLeft="@dimen/edittext_size"
        android:layout_marginRight="@dimen/edittext_size"
    android:src="@drawable/login_btn" android:contentDescription="@string/app_name"/>

<TextView
    android:id="@+id/textView1"
    android:layout_width="fill_parent"
    android:layout_height="32dp"
    android:text="@string/pwd_forgot" 
    android:gravity="left"
    android:layout_marginTop="10dp"
      android:layout_marginLeft="@dimen/edittext_size"
        android:layout_marginRight="@dimen/edittext_size"
    />

</LinearLayout>
